style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');

body {
    font-family: 'Poppins', sans-serif !important;
    margin: 0;
    min-height: 100vh;
}

header {
    color: white;
    text-align: center;
    background-color: #283655;
    margin-bottom: 10px;
}

header h1, header h3 {
    margin: 0;
    padding: 10px;
}

@media screen and (max-width: 453px) {
    header h3 {
        font-size: 5vw !important;
    }
}

#logo {
    width: 10vw;
    margin-top: 5px;
}

main {
    text-align: center;
}

#makanan, #minuman {
    margin-bottom: 15px;
    border: 3px black solid;
    margin: 5px;
}

@media screen and (min-width: 1280px) {
    #menu-container {
        display: flex;
        flex-direction: row;
    }

    #makanan, #minuman {
        text-align: center;
        
    }
}

.carousel-inner > .carousel-item > img {
        height: 456px;
}

#bertanya, #memesan {
    text-align: left;
}

.input {
    width: 100%;
}

footer {
    background-color: #4d648d;
    color: wheat;
    position: sticky;
    top: 100vh;
}

.link {
    color: wheat;
}

